k8s/kompose/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: docs
  name: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: docs
    spec:
      containers:
        - env:
            - name: DEBOUNCE_EXECUTOR
              valueFrom:
                configMapKeyRef:
                  key: DEBOUNCE_EXECUTOR
                  name: docs-env
            - name: DEFAULT_LANG
              valueFrom:
                configMapKeyRef:
                  key: DEFAULT_LANG
                  name: docs-env
            - name: DEFAULT_LANG_NAME
              valueFrom:
                configMapKeyRef:
                  key: DEFAULT_LANG_NAME
                  name: docs-env
            - name: DIRECTUS_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: DIRECTUS_EMAIL
                  name: docs-env
            - name: DIRECTUS_HOST
              valueFrom:
                configMapKeyRef:
                  key: DIRECTUS_HOST
                  name: docs-env
            - name: DIRECTUS_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DIRECTUS_PASSWORD
                  name: docs-env
            - name: DIRECTUS_PUBLIC_URL
              valueFrom:
                configMapKeyRef:
                  key: DIRECTUS_PUBLIC_URL
                  name: docs-env
            - name: DOCS_APP_PM2_NAME
              valueFrom:
                configMapKeyRef:
                  key: DOCS_APP_PM2_NAME
                  name: docs-env
            - name: ENV
              valueFrom:
                configMapKeyRef:
                  key: ENV
                  name: docs-env
            - name: IS_DOCKER
              valueFrom:
                configMapKeyRef:
                  key: IS_DOCKER
                  name: docs-env
            - name: REDIS_URL
              valueFrom:
                configMapKeyRef:
                  key: REDIS_URL
                  name: docs-env
            - name: TYPESENSE_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_API_KEY
                  name: docs-env
            - name: TYPESENSE_COLLECTION_NAME
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_COLLECTION_NAME
                  name: docs-env
            - name: TYPESENSE_HOST
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_HOST
                  name: docs-env
            - name: TYPESENSE_PORT
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_PORT
                  name: docs-env
            - name: TYPESENSE_PROTOCOL
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_PROTOCOL
                  name: docs-env
            - name: WEBSITE_URL
              valueFrom:
                configMapKeyRef:
                  key: WEBSITE_URL
                  name: docs-env
          image: registry-hub.smatflow.net/smatflow-projects/smatflow-portal/docs:latest
          name: docs
          ports:
            - containerPort: 3100
              protocol: TCP
          volumeMounts:
            - mountPath: /app/apps/docs/i18n
              name: docs-i18n
            - mountPath: /app/apps/docs/docs
              name: docs-data
            - mountPath: /app/apps/docs/meta
              name: docs-meta
            - mountPath: /app/apps/docs/build
              name: docs-build
            - mountPath: /app/apps/docs/.docusaurus
              name: docs-docusaurus
            - mountPath: /app/tools/docsearch-scraper/meta
              name: docs-scraper-meta
      restartPolicy: Always
      volumes:
        - name: docs-i18n
          persistentVolumeClaim:
            claimName: docs-i18n
        - name: docs-data
          persistentVolumeClaim:
            claimName: docs-data
        - name: docs-meta
          persistentVolumeClaim:
            claimName: docs-meta
        - name: docs-build
          persistentVolumeClaim:
            claimName: docs-build
        - name: docs-docusaurus
          persistentVolumeClaim:
            claimName: docs-docusaurus
        - name: docs-scraper-meta
          persistentVolumeClaim:
            claimName: docs-scraper-meta
