k8s/kompose/docsearch-scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: docsearch-scraper
  name: docsearch-scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docsearch-scraper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: docsearch-scraper
    spec:
      containers:
        - env:
            - name: DOCS_WEB_URL
              valueFrom:
                configMapKeyRef:
                  key: DOCS_WEB_URL
                  name: docker-env
            - name: TYPESENSE_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_API_KEY
                  name: docker-env
            - name: TYPESENSE_HOST
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_HOST
                  name: docker-env
            - name: TYPESENSE_PORT
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_PORT
                  name: docker-env
            - name: TYPESENSE_PROTOCOL
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_PROTOCOL
                  name: docker-env
          image: registry-hub.smatflow.net/smatflow-projects/smatflow-portal/docsearch-scraper:latest
          name: docsearch-scraper
          volumeMounts:
            - mountPath: /root/meta
              name: docs-scraper-meta
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: docs-scraper-meta
          persistentVolumeClaim:
            claimName: docs-scraper-meta
            readOnly: true
