k8s/kompose/typesense-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: typesense
  name: typesense
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: typesense
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: typesense
    spec:
      containers:
        - env:
            - name: TYPESENSE_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_API_KEY
                  name: docker-env
            - name: TYPESENSE_CORS_DOMAINS
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_CORS_DOMAINS
                  name: docker-env
            - name: TYPESENSE_DATA_DIR
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_DATA_DIR
                  name: docker-env
            - name: TYPESENSE_ENABLE_CORS
              valueFrom:
                configMapKeyRef:
                  key: TYPESENSE_ENABLE_CORS
                  name: docker-env
          image: typesense/typesense:0.23.1
          name: typesense
          ports:
            - containerPort: 8108
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: typesense-data
      restartPolicy: Always
      volumes:
        - name: typesense-data
          persistentVolumeClaim:
            claimName: typesense-data
