k8s/kompose/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: CMS_URL
              value: http://cms:8055
            - name: DIRECTUS_EMAIL
              value: admin@example.com
            - name: DIRECTUS_PASSWORD
              value: password
            - name: DIRECTUS_URL
              value: http://cms:8055
          image: registry-hub.smatflow.net/smatflow-projects/smatflow-portal/web:latest
          name: web
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/apps/web/.next/cache
              name: web-cache
      restartPolicy: Always
      volumes:
        - name: web-cache
          persistentVolumeClaim:
            claimName: web-cache
