k8s/kompose/cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: cms
  name: cms
spec:
  ports:
    - name: "8055"
      port: 8055
      targetPort: 8055
  selector:
    io.kompose.service: cms
