k8s/kompose/typesense-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: typesense
  name: typesense
spec:
  ports:
    - name: "8108"
      port: 8108
      targetPort: 8108
  selector:
    io.kompose.service: typesense
